# neobes-gui

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  about.ui  adpcm.h  audioplayer.cpp  bdutil.cpp  config.h  intcommand.cpp  intcommand.h  job.cpp  job.h  main.cpp  neobes.cpp  neobes.h  neobes.ui  neodata.cpp  neodata.h  neosound.cpp  neosound.h  pcsx2reader.cpp  pcsx2reader.h  pcsx2upload.cpp  pcsx2util.cpp  pcsx2util.h  readme.md  resources.qrc  settings.cpp  settings.ui  stageinfo.cpp  stageinfo.h  suggest.cpp  suggest.h  types.h
audio/: audioplayer.h  audioplayer.ui  bd.cpp  bd.h  soundmanager.cpp  soundmanager.h  soundsystem.cpp  soundsystem.h
data/: ptr2stages.cpp  ptr2stages.h  ptr2struct.cpp  ptr2struct.h  stageinfo.cpp  stageinfo.h
io/: emuinterfacer.cpp  emuinterfacer.h  ptr2injector.cpp  ptr2reader.cpp  ptr2reader.h
lib/audio/: adpcm.cpp  bdutil.cpp  bdutil.h
lib/io/: pine.h
ui/: editorgui.cpp  editorgui.h  editorgui.ui  guimanager.cpp  guimanager.h  menugui.cpp  menugui.h  menugui.ui  neobes.cpp  neobes.h  neobes.ui  settings.cpp  settings.h  settings.ui
